DOCS: landing page css fixes

--- a/website/src/components/landing-page/CTAButton/ctabutton.module.css
+++ b/website/src/components/landing-page/CTAButton/ctabutton.module.css
@@ -36,6 +36,7 @@
 
 .SquareButton[data-primary]:hover {
 	background-color: var(--cta-button-primary-background-hover);
+	color: #ffffff;
 }
 
 .SquareButton[data-primary]:active {
