Update across libs the colors

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -9,18 +9,18 @@
 	font-display: swap;
 	--color-white: #ffffff;
 	--color-black: #000000;
-	--color-cold-gray-50: #f8f9fd;
-	--color-cold-gray-100: #F0F3FA;
-	--color-cold-gray-150: #E0E3EB;
-	--color-cold-gray-200: #D1D4DC;
-	--color-cold-gray-300: #B2B5BE;
-	--color-cold-gray-500: #787B86;
-	--color-cold-gray-700: #434651;
-	--color-cold-gray-750: #363A45;
-	--color-cold-gray-800: #2A2E39;
-	--color-cold-gray-850: #1E222D;
-	--color-cold-gray-900: #131722;
-	--color-cold-gray-950: #0C0E15;
+	--color-cold-gray-50: #f9f9f9;
+	--color-cold-gray-100: #f2f2f2;
+	--color-cold-gray-150: #ebebeb;
+	--color-cold-gray-200: #dbdbdb;
+	--color-cold-gray-300: #b8b8b8;
+	--color-cold-gray-500: #808080;
+	--color-cold-gray-700: #4a4a4a;
+	--color-cold-gray-750: #3d3d3d;
+	--color-cold-gray-800: #303030;
+	--color-cold-gray-850: #262626;
+	--color-cold-gray-900: #1a1a1a;
+	--color-cold-gray-950: #0f0f0f;
 	--color-tv-blue-200: #90BFF9;
 	--color-tv-blue-300: #5B9CF6;
 	--color-tv-blue-400: #3179F5;
