Update css for gray colours

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -17,10 +17,10 @@
 	--color-cold-gray-500: #808080;
 	--color-cold-gray-700: #4a4a4a;
 	--color-cold-gray-750: #3d3d3d;
-	--color-cold-gray-800: #303030;
-	--color-cold-gray-850: #262626;
-	--color-cold-gray-900: #1a1a1a;
-	--color-cold-gray-950: #0f0f0f;
+	--color-cold-gray-800: #2E2E2E;
+	--color-cold-gray-850: #1F1F1F;
+	--color-cold-gray-900: #0F0F0F;
+	--color-cold-gray-950: #000000;
 	--color-tv-blue-200: #90BFF9;
 	--color-tv-blue-300: #5B9CF6;
 	--color-tv-blue-400: #3179F5;
