--- a/website/src/components/CardLink/styles.module.css
+++ b/website/src/components/CardLink/styles.module.css
@@ -9,6 +9,7 @@
 	transition-property: border, box-shadow;
 
 	flex-direction: row;
+	height: 100%;
 }
 
 .cardContainer:hover {
@@ -46,6 +47,7 @@
 
 .cardDescription {
 	font-size: 0.8rem;
+	text-wrap: wrap;
 }
 
 .noWrap {
